# chiefai-project

./: README.md  chiefaiuser@gmail.com.ics
backend/: .db.env  .env  .gitignore  pyproject.toml
backend/app/: main.py
backend/app/api/dependencies/: auth.py
backend/app/api/v1/: __init__.py  auth.py  calendar.py
backend/app/core/: security.py  token.py
backend/app/core/settings/: app.py  base.py  dev.py  test.py
backend/app/database/migraions/versions/: b2437a6523e3_first.py
backend/app/database/repositories/: calendar.py  users.py
backend/app/models/: __init__.py  calendar.py  user.py
backend/app/schemas/: calendar.py  user.py
backend/app/services/: calendar.py  users.py  vector_store.py
backend/app/utils/: app_exceptions.py  openai_utils.py  service_result.py  vectors.py
frontend/: .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: _variables.scss  index.scss  main.tsx
frontend/src/app/: provider.tsx  router.tsx
frontend/src/app/routes/: not-found.tsx
frontend/src/app/routes/app/: root.scss  root.tsx
frontend/src/app/routes/auth/: login.tsx
frontend/src/components/errors/: main.tsx
frontend/src/components/layouts/: auth-layout.scss  auth-layout.tsx  content-layout.scss  content-layout.tsx  root-layout.scss  root-layout.tsx
frontend/src/components/seo/: head.tsx
frontend/src/components/ui/topbar/: topbar.scss  topbar.tsx
frontend/src/config/: env.ts  paths.ts
frontend/src/features/auth/components/: login-register-form.tsx  login-register.scss
frontend/src/lib/: api-client.ts  auth.tsx  authorization.tsx
frontend/src/types/: api.ts  enums.ts  global.d.ts
frontend/src/utils/: format.ts
(+5 files in other folders)
